[project]
name = "knowledge-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipycytoscape>=1.3.3",
    "ipykernel>=7.2.0",
    "networkx>=3.6.1",
    "openai>=2.29.0",
    "pandas>=3.0.1",
]
